--- a/old-school.html
+++ b/old-school.html
@@ -2,7 +2,7 @@
 =========================================================
 Name        : index.html
 Assignment  : Lab 3 Exercise B
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
+Author(s)   : Ryan Razi and Adeeb Hossain
 Submission  : May 21, 2030
 Description : Understanding Old-School HTML Layouts.
 =========================================================
