--- a/Lab3/form.html
+++ b/Lab3/form.html
@@ -2,7 +2,7 @@
 =========================================================
 Name        : form.html
 Assignment  : Lab 3 Exercise C
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
+Author(s)   : Ryan Razi, Adeeb Hossain
 Submission  : May 21, 2030
 Description : A simple HTML file for form tag.
 =========================================================
