--- a/Lab3/form.html
+++ b/Lab3/form.html
@@ -19,9 +19,13 @@ Description : A simple HTML file for form tag.
         <fieldset>
             <legend>Personal Information</legend>
             <!-- Add a label and input field for 'Name' here -->
+            <label for="Name">Name:</label><br>
+            <input type="Name" id="Name" name="Name"><br>
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email"><br>
             <!-- Add a label and input field for 'Password' here, ensure to use the correct type for password fields -->
+            <label for="password">Password:</label><br>
+            <input type="password" id="Password" name="Password"><br>
         </fieldset>
 
         <fieldset>
@@ -30,6 +34,11 @@ Description : A simple HTML file for form tag.
 			<input type="radio" id="male" name="gender" value="male">
             <label for="male">Male</label><br>
             <!-- Create radio buttons for 'Female', and 'Other' gender options -->
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label><br>
+            <input type="radio" id="other" name="gender" value="other">
+            <label for="other">Other</label><br>
+
 	
             <label for="fruits">Choose a fruit:</label><br>
             <select id="fruits" name="fruits">
