added the fruit list with scroll

--- a/Lab3/form.html
+++ b/Lab3/form.html
@@ -41,11 +41,21 @@ Description : A simple HTML file for form tag.
 
 	
             <label for="fruits">Choose a fruit:</label><br>
-            <select id="fruits" name="fruits">
-				<option value="apple">Apple</option>
+            <select id="fruits" name="fruits" size="5">
                 <!-- Add options for various fruits like Banana, Orange, etc. (At least 10 fruits) -->
+                <option value="apple">Apple</option>
+                <option value="banana">Banana</option>
+                <option value="grape">Grape</option>
+                <option value="durian">Durian</option>
+                <option value="pineapple">Pineapple</option>
+                <option value="pear">Pear</option>
+                <option value="strawberry">Strawberry</option>
+                <option value="blueberry">Blueberry</option>
+                <option value="kiwi">Kiwi</option>
+                <option value="watermelon">Watermelon</option>
+                <option value="starfruit">Starfruit</option>
             </select><br>
-			<!-- Add some attributes to select tag that changes it from a drop menu to a scrollable list.-->
+            
         </fieldset>
 
         <fieldset>
