--- a/Lab3/form.html
+++ b/Lab3/form.html
@@ -68,7 +68,7 @@ Description : A simple HTML file for form tag.
             <input type="color" id="favcolor" name="favcolor"><br>
 
             <!-- Add a label and number input field for 'Quantity', set min to 1 and max to 5 -->
-            <label for="quantity">Quanitity (between 1 and 5):</label><br>
+            <label for="quantity">Quantity (between 1 and 5):</label><br>
             <input type="number" id="quantity" name="quantity" min="1" max="5"><br>
 
             <label for="range">Range (between 1 and 10):</label><br>
@@ -76,7 +76,7 @@ Description : A simple HTML file for form tag.
 
 			<!-- Add an attribute to the range input to set its initial value to 2-->
             <label for="range">Range (between 1 and 2):</label><br>
-            <input type="range" id="range" name="range" min="1" max="2"><br>
+            <input type="range" id="range" name="range" min="1" max="10" value="2"><br>
 
             <!-- Add a label and input field for 'Homepage', use the correct type for URLs -->
             <label for="homepage">Homepage:</label><br>
