--- a/Lab3/styling.html
+++ b/Lab3/styling.html
@@ -2,8 +2,8 @@
 =========================================================
 Name        : index.html
 Assignment  : Lab 3 Exercise D
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Ryan Razi, Adeeb Hossain
+Submission  : January 31, 2024
 Description : Learning CSS.
 =========================================================
 -->
