--- a/Lab3/styling.html
+++ b/Lab3/styling.html
@@ -39,6 +39,7 @@ Description : Learning CSS.
 
         .block-demo {
             /*Ensure .block-demo centers its text.*/
+            display: block;
             text-align: center;
 
         }
